kustomize/overlays/prod/kafka/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafka-ui
spec:
  template:
    spec:
      containers:
      - name: kafka-ui
