kustomize/overlays/prod/kafka/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kafka-ui-ingress
  namespace: task-tracker-prod
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /prod/kafka
        pathType: Prefix
        backend:
          service:
            name: kafka-ui-service
            port:
              number: 8080
